tests/expectations/compiler/core/algorithms/integers/bhp512/bhp512_hash_to_u128.out
Error [ETYC0372006]: Call expected `2` args, but got `1`
    --> compiler-test:28:23
     |
  28 |         let a: u128 = BHP512::hash_to_u128(addr_value);
     |                       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error [ETYC0372006]: Call expected `2` args, but got `1`
    --> compiler-test:29:23
     |
  29 |         let b: u128 = BHP512::hash_to_u128(bool_value);
     |                       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error [ETYC0372006]: Call expected `2` args, but got `1`
    --> compiler-test:30:23
     |
  30 |         let c: u128 = BHP512::hash_to_u128(field_value);
     |                       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error [ETYC0372006]: Call expected `2` args, but got `1`
    --> compiler-test:31:23
     |
  31 |         let d: u128 = BHP512::hash_to_u128(group_value);
     |                       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error [ETYC0372006]: Call expected `2` args, but got `1`
    --> compiler-test:32:23
     |
  32 |         let e: u128 = BHP512::hash_to_u128(i8_value);
     |                       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error [ETYC0372006]: Call expected `2` args, but got `1`
    --> compiler-test:33:23
     |
  33 |         let f: u128 = BHP512::hash_to_u128(i16_value);
     |                       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error [ETYC0372006]: Call expected `2` args, but got `1`
    --> compiler-test:34:23
     |
  34 |         let g: u128 = BHP512::hash_to_u128(i32_value);
     |                       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error [ETYC0372006]: Call expected `2` args, but got `1`
    --> compiler-test:35:23
     |
  35 |         let h: u128 = BHP512::hash_to_u128(i64_value);
     |                       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error [ETYC0372006]: Call expected `2` args, but got `1`
    --> compiler-test:36:23
     |
  36 |         let i: u128 = BHP512::hash_to_u128(i128_value);
     |                       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error [ETYC0372006]: Call expected `2` args, but got `1`
    --> compiler-test:37:23
     |
  37 |         let j: u128 = BHP512::hash_to_u128(u8_value);
     |                       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error [ETYC0372006]: Call expected `2` args, but got `1`
    --> compiler-test:38:23
     |
  38 |         let k: u128 = BHP512::hash_to_u128(u16_value);
     |                       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error [ETYC0372006]: Call expected `2` args, but got `1`
    --> compiler-test:39:23
     |
  39 |         let l: u128 = BHP512::hash_to_u128(u32_value);
     |                       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error [ETYC0372006]: Call expected `2` args, but got `1`
    --> compiler-test:40:23
     |
  40 |         let m: u128 = BHP512::hash_to_u128(u64_value);
     |                       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error [ETYC0372006]: Call expected `2` args, but got `1`
    --> compiler-test:41:23
     |
  41 |         let n: u128 = BHP512::hash_to_u128(u128_value);
     |                       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error [ETYC0372006]: Call expected `2` args, but got `1`
    --> compiler-test:42:23
     |
  42 |         let o: u128 = BHP512::hash_to_u128(scalar_value);
     |                       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error [ETYC0372006]: Call expected `2` args, but got `1`
    --> compiler-test:44:23
     |
  44 |         let q: u128 = BHP512::hash_to_u128(Foo { a: 1u128, b: 1u128 });
     |                       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
